Still Working on storyboard

--- a/GTownRadio/Base.lproj/Main.storyboard
+++ b/GTownRadio/Base.lproj/Main.storyboard
@@ -20,8 +20,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FAN-20-8CS" customClass="SVGPlayButton" customModule="gtownradio" customModuleProvider="target">
-                                <rect key="frame" x="135" y="360" width="50" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FAN-20-8CS" userLabel="Play Button" customClass="SVGPlayButton" customModule="gtownradio" customModuleProvider="target">
+                                <rect key="frame" x="135" y="318" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="MSZ-zR-rqe"/>
                                     <constraint firstAttribute="width" constant="50" id="zIf-a7-nSL"/>
@@ -31,9 +31,9 @@
                                 </connections>
                             </button>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rvf-Cg-fg0" userLabel="Now Playing Container">
-                                <rect key="frame" x="16" y="20" width="288" height="319"/>
+                                <rect key="frame" x="16" y="20" width="288" height="288"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="rvf-Cg-fg0" secondAttribute="height" multiplier="9:10" id="ffL-GM-9Ea"/>
+                                    <constraint firstAttribute="width" secondItem="rvf-Cg-fg0" secondAttribute="height" multiplier="10:10" id="ffL-GM-9Ea"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="tTn-iN-6x3" kind="embed" identifier="NowPlayingEmbedID" id="AWb-RW-jT7"/>
@@ -43,7 +43,7 @@
                         <color key="backgroundColor" red="0.93945127139412266" green="1" blue="0.91750150716196632" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="rvf-Cg-fg0" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="20" id="82W-dc-eK1"/>
-                            <constraint firstItem="FAN-20-8CS" firstAttribute="top" secondItem="rvf-Cg-fg0" secondAttribute="bottom" constant="21" id="Htk-4F-k38"/>
+                            <constraint firstItem="FAN-20-8CS" firstAttribute="top" secondItem="rvf-Cg-fg0" secondAttribute="bottom" constant="10" id="Htk-4F-k38"/>
                             <constraint firstItem="rvf-Cg-fg0" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="IhM-jN-ZLT"/>
                             <constraint firstItem="FAN-20-8CS" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="UPc-c1-qej"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="rvf-Cg-fg0" secondAttribute="trailing" constant="16" id="iGf-W8-C91"/>
@@ -89,49 +89,49 @@
             <objects>
                 <viewController id="tTn-iN-6x3" customClass="NowPlayingViewController" customModule="gtownradio" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CY1-Dp-oyE">
-                        <rect key="frame" x="0.0" y="0.0" width="288" height="319"/>
+                        <rect key="frame" x="0.0" y="0.0" width="288" height="288"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJs-jo-b0a">
-                                <rect key="frame" x="16" y="243" width="256" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="iG0-8Q-7fV"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press Play" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Csx-2P-4uo">
-                                <rect key="frame" x="16" y="266" width="256" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="5ek-l4-CjR"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aPN-D7-dTw">
-                                <rect key="frame" x="44" y="32" width="200" height="200"/>
+                                <rect key="frame" x="28" y="0.0" width="232" height="232"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="aPN-D7-dTw" secondAttribute="height" multiplier="1:1" id="Y4i-Tt-sNv"/>
+                                    <constraint firstAttribute="width" secondItem="aPN-D7-dTw" secondAttribute="height" multiplier="1:1" id="Ej2-ab-CrE"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Press Play" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJs-jo-b0a">
+                                <rect key="frame" x="0.0" y="238" width="288" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="4xz-dC-w6J"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Csx-2P-4uo">
+                                <rect key="frame" x="0.0" y="261" width="288" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="qyf-vL-rZO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.98325842620000004" green="0.86164111379999997" blue="0.9428730998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="W4c-fM-Foa" firstAttribute="trailing" secondItem="Csx-2P-4uo" secondAttribute="trailing" constant="16" id="Dz3-9V-DNZ"/>
-                            <constraint firstItem="aPN-D7-dTw" firstAttribute="leading" secondItem="W4c-fM-Foa" secondAttribute="leading" constant="44" id="Jbg-HF-L9S"/>
-                            <constraint firstItem="W4c-fM-Foa" firstAttribute="trailing" secondItem="aPN-D7-dTw" secondAttribute="trailing" constant="44" id="Wun-LG-uVU"/>
-                            <constraint firstItem="NJs-jo-b0a" firstAttribute="leading" secondItem="W4c-fM-Foa" secondAttribute="leading" constant="16" id="geR-Lb-vaq"/>
-                            <constraint firstItem="Csx-2P-4uo" firstAttribute="top" secondItem="NJs-jo-b0a" secondAttribute="bottom" constant="2" id="oIL-gb-8jc"/>
-                            <constraint firstItem="W4c-fM-Foa" firstAttribute="trailing" secondItem="NJs-jo-b0a" secondAttribute="trailing" constant="16" id="ryp-dG-nPI"/>
-                            <constraint firstItem="Csx-2P-4uo" firstAttribute="leading" secondItem="W4c-fM-Foa" secondAttribute="leading" constant="16" id="s5Q-mS-88r"/>
-                            <constraint firstItem="NJs-jo-b0a" firstAttribute="top" secondItem="aPN-D7-dTw" secondAttribute="bottom" constant="11" id="tro-Zw-hsh"/>
-                            <constraint firstItem="aPN-D7-dTw" firstAttribute="top" secondItem="W4c-fM-Foa" secondAttribute="top" constant="32" id="xNJ-aP-APS"/>
+                            <constraint firstItem="Csx-2P-4uo" firstAttribute="trailing" secondItem="W4c-fM-Foa" secondAttribute="trailing" id="1uN-JZ-End"/>
+                            <constraint firstItem="aPN-D7-dTw" firstAttribute="top" secondItem="W4c-fM-Foa" secondAttribute="top" id="7NK-xy-VUy"/>
+                            <constraint firstItem="NJs-jo-b0a" firstAttribute="leading" secondItem="W4c-fM-Foa" secondAttribute="leading" id="AYj-Tg-jxJ"/>
+                            <constraint firstItem="NJs-jo-b0a" firstAttribute="trailing" secondItem="W4c-fM-Foa" secondAttribute="trailing" id="TFl-H2-vZd"/>
+                            <constraint firstItem="Csx-2P-4uo" firstAttribute="top" secondItem="NJs-jo-b0a" secondAttribute="bottom" constant="2" id="cVr-qL-2k1"/>
+                            <constraint firstItem="aPN-D7-dTw" firstAttribute="leading" secondItem="W4c-fM-Foa" secondAttribute="leading" constant="28" id="duI-O1-Xq2"/>
+                            <constraint firstItem="Csx-2P-4uo" firstAttribute="leading" secondItem="W4c-fM-Foa" secondAttribute="leading" id="gON-6K-zCW"/>
+                            <constraint firstItem="W4c-fM-Foa" firstAttribute="trailing" secondItem="aPN-D7-dTw" secondAttribute="trailing" constant="28" id="lyi-fX-SNR"/>
+                            <constraint firstItem="NJs-jo-b0a" firstAttribute="top" secondItem="aPN-D7-dTw" secondAttribute="bottom" constant="6" id="zJ8-oZ-9UE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="W4c-fM-Foa"/>
                     </view>
+                    <size key="freeformSize" width="288" height="288"/>
                     <connections>
                         <outlet property="albumArtImageView" destination="aPN-D7-dTw" id="R6J-xv-vJ6"/>
                         <outlet property="artistLabel" destination="Csx-2P-4uo" id="Agq-hD-SGk"/>
